[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Viglucci <kviglucci+cargo@gmail.com"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/viglucci/grrs"
repository = "https://github.com/viglucci/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
human-panic = "1.0.3"
